// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`store - dates-selected-context should render provider with children 1`] = `
<DocumentFragment>
  <div>
    Test component
  </div>
</DocumentFragment>
`;

exports[`store - dates-selected-context should return default date 1`] = `
<DocumentFragment>
  <div>
    2023-04-28
  </div>
</DocumentFragment>
`;

exports[`store - dates-selected-context should update state date 1`] = `
<DocumentFragment>
  <div>
    2023-01-01
  </div>
</DocumentFragment>
`;
